# blog

./: .nojekyll  _quarto.yml  about.html  about.qmd  index.html  index.qmd  listings.json  pyproject.toml  robots.txt  search.json  sitemap.xml  styles.css
.github/workflows/: publish.yml
_freeze/posts/berkson/index/execute-results/: html.json
_freeze/posts/coffee/index/execute-results/: html.json
_freeze/posts/copulas/index/execute-results/: html.json
_site/: about.html  index.html  listings.json  search.json
_site/posts/berkson/: index.html
_site/posts/coffee/: index.html
_site/posts/copulas/: index.html
_site/posts/dirichlet_geo/: index.html
_site/posts/outcomes/: index.html
_site/posts/post-with-code/: index.html
_site/posts/spending/: index.html
_site/posts/welcome/: index.html
_site/site_libs/bootstrap/: bootstrap-06f1eb64e6c5ebdabe8b20dedbcda644.min.css  bootstrap-221dba02c540ab3c03ca89d4485f2f95.min.css  bootstrap-82c201a057d364667956ef68abb86355.min.css  bootstrap-8775b75340b72f6da9c4cfff17e01e7b.min.css  bootstrap-8cd7fb5638ff5aef6f194cfb78a49ea2.min.css
posts/berkson/: index.html  index.qmd
posts/coffee/: index.qmd
posts/copulas/: index.html  index.qmd
posts/dirichlet_geo/: index.html  index.qmd
posts/outcomes/: index.html  index.qmd
posts/post-with-code/: index.html  index.qmd
posts/spending/: index.html  index.qmd
posts/welcome/: index.html  index.qmd
site_libs/bootstrap/: bootstrap-b1979137b66e9a03b70ee7400940daeb.min.css
src/: constants.py
src/plotting/: finance_plots.py  stat_plots.py
(+5 files in other folders)
